# ATL_calculator_backend

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  TODO  calculator.py  config.py  deploy.sh  deploy_update.sh  docker-compose.yml  pyproject.toml  server.py  status.sh  test_server.py
resources/: KillData.xls
resources/legacy/: SystemParameters.xls  UV Systems.xls
tests/: test_login.py  test_pressure_drop.py  test_server.py
