[project]
name = "newbackend"
version = "0.1.0"
description = "UV System Calculator REST API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn",
    "pydantic>=2.5.0"
]

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "*.py",
    "resources/**/*"
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "httpx>=0.25.0"  # For testing FastAPI
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
